--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -4,12 +4,9 @@
   | default @import url()
   |============================
 */
-@import url('./reset.css');
-@import url('./vite-promo.css');
-@import url('./header.css');
 
 :root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
@@ -22,4 +19,151 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+}
+
+body {
+  padding: 36px;
+}
+
+p {
+  margin: 0;
+}
+
+.form {
+  text-align: center;
+  height: 40px;
+  margin-bottom: 32px;
+}
+
+.form input {
+  box-sizing: border-box;
+  min-width: 272px;
+  height: 40px;
+  margin-right: 8px;
+  border: 1px solid #808080;
+  border-radius: 4px;
+  padding: 8px 16px;
+
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.04em;
+  color: black;
+}
+
+.form input:focus-visible {
+  outline: none;
+}
+
+form input::placeholder {
+  color: #808080;
+}
+
+button {
+  box-sizing: border-box;
+  border-radius: 8px;
+  padding: 8px 16px;
+  height: 40px;
+  padding: 8px 16px;
+  border-radius: 8px;
+  border: none;
+  background: #4e75ff;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 150%;
+  color: #fff;
+}
+
+button:focus-visible {
+  outline: none;
+}
+
+.load-more {
+  text-align: center;
+  margin-top: 32px;
+}
+
+.load-more button {
+  display: none;
+}
+
+.gallery {
+  margin: -12px auto;
+  display: flex;
+  width: 1152px;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.gallery-item {
+  box-sizing: border-box;
+  width: 360px;
+  height: 200px;
+  margin: 12px;
+  border: 1px solid #808080;
+  overflow: hidden;
+  position: relative;
+}
+
+.gallery-item img {
+  width: 360px;
+  height: 200px;
+}
+
+.inscriptions {
+  background-color: white;
+  display: flex;
+  padding: 4px;
+  width: 360px;
+  justify-content: space-around;
+  transform: translateY(100px);
+  position: absolute;
+  top: 54px;
+}
+
+.insc-name {
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 133%;
+  color: #2e2f42;
+  text-align: center;
+}
+
+.insc-value {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 200%;
+  color: #2e2f42;
+  text-align: center;
+}
+
+.loader {
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+  position: relative;
+  animation: rotate 1s linear infinite
+}
+.loader::before {
+  content: "";
+  box-sizing: border-box;
+  position: absolute;
+  inset: 0px;
+  border-radius: 50%;
+  border: 5px solid black;
+  animation: prixClipFix 2s linear infinite ;
+}
+
+@keyframes rotate {
+  100%   {transform: rotate(360deg)}
+}
+
+@keyframes prixClipFix {
+    0%   {clip-path:polygon(50% 50%,0 0,0 0,0 0,0 0,0 0)}
+    25%  {clip-path:polygon(50% 50%,0 0,100% 0,100% 0,100% 0,100% 0)}
+    50%  {clip-path:polygon(50% 50%,0 0,100% 0,100% 100%,100% 100%,100% 100%)}
+    75%  {clip-path:polygon(50% 50%,0 0,100% 0,100% 100%,0 100%,0 100%)}
+    100% {clip-path:polygon(50% 50%,0 0,100% 0,100% 100%,0 100%,0 0)}
 }
